gitops/manifests/memos/install.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: memos
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    io.kompose.service: memos
  name: memos
  namespace: memos
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: memos
  template:
    metadata:
      annotations: {}
      labels:
        io.kompose.service: memos
        app.kubernetes.io/name: memos
    spec:
      containers:
        - env:
            - name: MEMOS_PORT
              value: "5230"
            - name: MEMOS_DRIVER
              value: postgres
            - name: MEMOS_DSN
              value: user=<path:secret/data/postgres_db#USER> password=<path:secret/data/postgres_db#PASSWORD> dbname=memos host=<path:secret/data/postgres_db#HOST_NAME> sslmode=disable
          image: neosmemo/memos:0.22
          name: memos
          ports:
            - containerPort: 5230
              protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    io.kompose.service: memos
  name: memos
  namespace: memos
spec:
  ports:
    - name: "5230"
      port: 5230
      targetPort: 5230
  selector:
    io.kompose.service: memos
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: memos-ingress
  namespace: memos
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`memos.local.timmybtech.com`)
      kind: Rule
      services:
        - name: memos
          port: 5230
  tls:
    secretName: local-timmybtech-com-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudflared
  namespace: memos
spec:
  selector:
    matchLabels:
      app: cloudflared
  replicas: 2 # You could also consider elastic scaling for this deployment
  template:
    metadata:
      labels:
        app: cloudflared
    spec:
      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2024.11.0
          args:
            - tunnel
            # Points cloudflared to the config file, which configures what
            # cloudflared will actually do. This file is created by a ConfigMap
            # below.
            - --config
            - /etc/cloudflared/config/config.yaml
            - run
          livenessProbe:
            httpGet:
              # Cloudflared has a /ready endpoint which returns 200 if and only if
              # it has an active connection to the edge.
              path: /ready
              port: 2000
            failureThreshold: 1
            initialDelaySeconds: 10
            periodSeconds: 10
          volumeMounts:
            - name: config
              mountPath: /etc/cloudflared/config
              readOnly: true
            # Each tunnel has an associated "credentials file" which authorizes machines
            # to run the tunnel. cloudflared will read this file from its local filesystem,
            # and it'll be stored in a k8s secret.
            - name: creds
              mountPath: /etc/cloudflared/creds
              readOnly: true
      volumes:
        - name: creds
          secret:
            # By default, the credentials file will be created under ~/.cloudflared/[tunnel ID].json
            # when you run `cloudflared tunnel create`. You can move it into a secret by using:
            # ```sh
            # kubectl create secret generic tunnel-credentials \
            # --from-file=credentials.json=/Users/yourusername/.cloudflared/[tunnel ID].json
            # ```
            secretName: tunnel-credentials
        # Create a config.yaml file from the ConfigMap below.
        - name: config
          configMap:
            name: cloudflared
            items:
              - key: config.yaml
                path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cloudflared
  namespace: memos
spec:
  selector:
    app: cloudflared
  ports:
    - port: 2000
      protocol: TCP
      targetPort: 2000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: cloudflared-ingress
  namespace: memos
  annotations:
    kubernetes.io/ingress.class: traefik-external
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cf-memos.local.timmybtech.com`)
      kind: Rule
      services:
        - name: cloudflared
          port: 2000
  tls:
    secretName: local-timmybtech-com-tls
